--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="shortcut icon" href="/ico/apple-touch-icon-72.png" type="image/x-icon">
     <link rel="shortcut icon" href="/ico/apple-touch-icon-114.png" type="image/x-icon">
     <link rel="shortcut icon" href="/ico/apple-touch-icon-144.png" type="image/x-icon">
-    <link rel="stylesheet" href="/dist/app.css" />
-    <script defer src="/app.js"></script>
+    <link rel="stylesheet" href="./dist/app.css" />
+    <script defer src="./app.js"></script>
   </head>
   <body>
     <div class="container">
